--- a/.travis.yml
+++ b/.travis.yml
@@ -1,38 +1,24 @@
-sudo: required
-
 language: python
-
+sudo: required
+env:
+  global:
+    - DISPLAY=:99.0
 python:
   - "2.7"
-
- cache:
-  - pip
-
 addons:
-  apt:
-    packages:
-      - chromium
-      - chromedriver
-      - firefox
-
+  firefox: "latest"
 virtualenv:
   system_site_packages: true
-
 services:
   - docker
-
 before_install:
-  - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - docker run -d -p 127.0.0.1:4444:4444 --name selenium-hub -e GRID_TIMEOUT=10000 selenium/hub
   - docker run docker run -d --dns 8.8.8.8 --link selenium-hub:hub --name node-chrome selenium/node-firefox
   - docker run docker run -d --dns 8.8.8.8 --link selenium-hub:hub --name node-chrome selenium/node-chrome
-
+  - apt-get install chromium chromedriver
 install:
   - pip install nose
   - python setup.py
-
 script:
   - nosetests -v selenium_extra/tests/
-
-
