fix travis docker command, setting name for nodes is useless

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ services:
 before_install:
   - sh -e /etc/init.d/xvfb start
   - docker run -d -p 4444:4444 --name selenium-hub -e GRID_TIMEOUT=10000 selenium/hub
-  - docker run -d --dns 8.8.8.8 --link selenium-hub:hub --name node-chrome selenium/node-firefox
-  - docker run -d --dns 8.8.8.8 --link selenium-hub:hub --name node-chrome selenium/node-chrome
+  - docker run -d --dns 8.8.8.8 --link selenium-hub:hub selenium/node-firefox
+  - docker run -d --dns 8.8.8.8 --link selenium-hub:hub selenium/node-chrome
 install:
   - pip install nose
   - python setup.py
