--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,6 @@ before_install:
   - docker run -d -p 4444:4444 --name selenium-hub -e GRID_TIMEOUT=10000 selenium/hub
   - docker run -d --dns 8.8.8.8 --link selenium-hub:hub selenium/node-firefox
   - docker run -d --dns 8.8.8.8 --link selenium-hub:hub selenium/node-chrome
-install:
-  - pip install nose
-  - python setup.py install
 script:
-  - nosetests -v selenium_extra/tests/
+  - python setup.py install
+  - python setyp.py test -s selenium_extra.tests
